# wpush.rs

./: .gitignore  Cargo.toml  README.md
assets/: notification.xml
demo/: Cargo.toml
demo/src/: main.rs
src/: lib.rs  notification.rs
wpush/: Cargo.toml
wpush/assets/: script.ps1
wpush/src/: lib.rs  notification.rs  powershell.rs  templates.rs
