[package]
name = "wpush"
version = "0.1.1"
edition = "2021"
authors = ["Juan Saez <saez.juan08@gmail.com>"]
description = "WPush is a Rust library that makes sending Windows toasts easier. Includes WSL support!"
readme = "README.md"
repository = "https://github.com/saez-juan/wpush.rs"
license = "MPL-2.0"
keywords = ["windows", "wsl", "notification", "push", "toast"]
categories = ["os", "os::windows-apis", "gui"]

[dependencies]
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
tempdir = "0.3.7"
